<resources>
    <string name="app_name">tchu-FeelsBook</string>
    <string name="joy_label">Joy</string>
    <string name="love_label">Love</string>
    <string name="surprise_label">Surprise</string>
    <string name="sad_label">Sad</string>
    <string name="angry_label">Angry</string>
    <string name="fear_label">Fear</string>
    <string name="main_title">How Are You Feeling?</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
</resources>
