<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/HistoryButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_person"
        android:onClick="historyLogClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/JoyButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/joy"
            android:contentDescription="@string/joy_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/JoyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/joy_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/LoveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/love"
            android:contentDescription="@string/love_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/LoveLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/love_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/SurpriseButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/surprise"
            android:contentDescription="@string/surprise_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/SurpriseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/surprise_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/SadButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/sad"
            android:contentDescription="@string/sad_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/SadLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sad_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/AngryButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/angry"
            android:contentDescription="@string/angry_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/AngryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/angry_label" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintCircle="@+id/HistoryButton"
        app:layout_constraintCircleAngle="360"
        app:layout_constraintCircleRadius="128dp">

        <Button
            android:id="@+id/FearButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/fear"
            android:contentDescription="@string/fear_label"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/FearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fear_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>